--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
 
                                 <!-- Email input -->
                                 <div data-mdb-input-init class="form-outline mb-4">
-                                    <input type="email" id="form3Example3" class="form-control" />
+                                    <input type="email" id="email" class="form-control" />
                                     <label class="form-label" for="form3Example3">Addresse mail</label>
                                 </div>
 
@@ -44,7 +44,7 @@
 
                                 <!-- Password input -->
                                 <div data-mdb-input-init class="form-outline mb-4">
-                                    <input type="password" id="form3Example4" class="form-control" />
+                                    <input type="password" id="password" class="form-control" />
                                     <label class="form-label" for="form3Example4">mot de passe</label>
                                 </div>
 
