--- a/register.html
+++ b/register.html
@@ -27,47 +27,39 @@
                     backdrop-filter: blur(30px);
                     ">
                         <div class="card-body p-5 shadow-5 text-center">
-                            <h2 class="fw-bold mb-5">Sign up now</h2>
+                            <h2 class="fw-bold mb-5">Création du compte</h2>
                             <form>
                                 <!-- 2 column grid layout with text inputs for the first and last names -->
-                                <div class="row">
-                                    <div class="col-md-6 mb-4">
-                                        <div data-mdb-input-init class="form-outline">
-                                            <input type="text" id="form3Example1" class="form-control" />
-                                            <label class="form-label" for="form3Example1">First name</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 mb-4">
-                                        <div data-mdb-input-init class="form-outline">
-                                            <input type="text" id="form3Example2" class="form-control" />
-                                            <label class="form-label" for="form3Example2">Last name</label>
-                                        </div>
-                                    </div>
+
+                                <div data-mdb-input-init class="form-outline mb-4">
+                                    <input type="text" id="username" class="form-control" />
+                                    <label class="form-label" for="form3Example1">Pseudo</label>
                                 </div>
+
 
                                 <!-- Email input -->
                                 <div data-mdb-input-init class="form-outline mb-4">
-                                    <input type="email" id="form3Example3" class="form-control" />
-                                    <label class="form-label" for="form3Example3">Email address</label>
+                                    <input type="email" id="email" class="form-control" />
+                                    <label class="form-label" for="form3Example3">Addresse mail</label>
                                 </div>
 
-                                
+
 
                                 <!-- Password input -->
                                 <div data-mdb-input-init class="form-outline mb-4">
-                                    <input type="password" id="form3Example4" class="form-control" />
-                                    <label class="form-label" for="form3Example4">mot de passe</label>
+                                    <input type="password" id="password" class="form-control" />
+                                    <label class="form-label" for="form3Example4">Mot de passe</label>
                                 </div>
 
                                 <!-- Password input -->
                                 <div data-mdb-input-init class="form-outline mb-4">
-                                    <input type="password" id="form3Example5" class="form-control" />
+                                    <input type="password" id="confirm_password" class="form-control" />
                                     <label class="form-label" for="form3Example5">Répéter le mot de passe</label>
                                 </div>
                                 <!-- Submit button -->
                                 <button type="submit" data-mdb-button-init data-mdb-ripple-init
                                     class="btn btn-primary btn-block mb-4">
-                                    Sign up
+                                    Créer le compte
                                 </button>
                             </form>
                         </div>
@@ -75,14 +67,10 @@
                 </div>
 
                 <div class="col-lg-6 mb-5 mb-lg-0">
-                    <img src="assets\img\Academic.webp"
-                        class="w-100 rounded-4 shadow-4" alt="" />
+                    <img src="assets\img\Academic.webp" class="w-100 rounded-4 shadow-4" alt="" />
                 </div>
             </div>
         </div>
-        <!-- Jumbotron -->
-        </section>
-        <!-- Section: Design Block -->
     </main>
 
 
