--- a/présentation.html
+++ b/présentation.html
@@ -8,17 +8,17 @@
 
     <link href="/assets/style/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="script.js"></script>
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="script.js"></script>
 </head>
 
-<body>
+<body class="about-us-body">
     <nav class="navbar navbar-expand-lg fixed-top bg-light navbar-light">
     <div class="container">
       <a class="navbar-brand" href="index.html"
@@ -49,7 +49,7 @@
             <a class="nav-link mx-2" href="aboutus.html"><i class="fas fa-bell pe-2"></i>A propos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mx-2" href="#!"><i class="fas fa-heart pe-2"></i>????</a>
+            <a class="nav-link mx-2" href="shop.html"><i class="fa-solid fa-cart-shopping"></i>La boutique</a>
           </li>
           <li class="nav-item ms-3">
             <a class="btn btn-black btn-rounded" href="login.html">Se connecter</a>
@@ -58,10 +58,9 @@
       </div>
     </div>
   </nav>
-
+  <br><br><br><br><br><br>
     <main>
-
-        <div class="paragraphe-1">
+         <div class="paragraphe-1">
             <h1>Darkest Dungeon</h1>
             <br>
             <img class="dd" src="assets/img/dd.jpg">
