--- a/test.html
+++ b/test.html
@@ -1,71 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lire la suite avec Bootstrap</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Boutique en Ligne</title>
     <style>
-        .more-content {
-            display: none;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f8f9fa;
+        }
+        h1 {
+            text-align: center;
+            color: #2c3e50;
+        }
+        .product-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+        .product {
+            background-color: white;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            width: 250px;
+            margin: 15px;
+            padding: 15px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+        .product img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+        .product h3 {
+            color: #34495e;
+            font-size: 18px;
+            margin: 10px 0;
+        }
+        .product p {
+            color: #7f8c8d;
+            font-size: 14px;
+            margin: 10px 0;
+        }
+        .product .price {
+            font-size: 18px;
+            color: #e67e22;
+            font-weight: bold;
+            margin: 10px 0;
+        }
+        .product button {
+            background-color: #16a085;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .product button:hover {
+            background-color: #1abc9c;
         }
     </style>
+    <script>
+        function buyItem(itemName) {
+            alert(`Vous avez ajouté "${itemName}" à votre panier !`);
+        }
+    </script>
 </head>
 <body>
-    <div class="container mt-4">
-        <div class="content">
-            <p>
-                L'une des principales composantes de Darkest Dungeon est le système de stress, qui représente la peur
-                ressentie par le héros alors qu'il parcourt le donjon. Chaque héros a une barre de stress qui se remplit
-                au fur et à mesure d’événements négatifs : attaque d'un ennemi, piège déclenché lors de l'exploration
-                dans l'obscurité, etc. Subir un coup critique augmente davantage le stress et certaines attaques
-                spéciales ennemies augmentent uniquement le stress.
-                <span class="more-content">
-                    Lorsque cette barre de stress est remplie, le héros
-                    est frappé d'une « affliction ». Celle-ci va modifier son comportement en tenant moins compte des ordres
-                    du joueur (par exemple, un héros va refuser de se soigner, va attaquer l'ennemi sans que le joueur ne
-                    lui en ait donné l'ordre, volera certains trésors, etc.). Il existe cependant une petite chance que le
-                    héros ne soit pas touché par une affliction et gagne au contraire un bonus.
+    <h1>Bienvenue dans notre Boutique 🛍️</h1>
+    <div class="product-list">
 
-                    Si la barre de stress se remplit une deuxième fois, le héros peut faire une crise cardiaque ce qui le
-                    rend extrêmement vulnérable aux attaques ennemies. En cas de seconde crise cardiaque, si le héros n'a
-                    pas été soigné des conséquences de la première, il meurt.
-                </span>
-            </p>
-            <button class="toggleButton btn btn-link p-0">Lire la suite</button>
+        <div class="product">
+            <img src="https://via.placeholder.com/250" alt="Pommes">
+            <h3>Pommes</h3>
+            <p>Des pommes fraîches et savoureuses, parfaites pour vos desserts ou collations.</p>
+            <p class="price">3,99 € / kg</p>
+            <button onclick="buyItem('Pommes')">Acheter</button>
         </div>
 
-        <div class="content">
-            <p>
-                Voici un autre exemple de paragraphe avec un texte initial et un contenu caché. Vous pouvez ajouter autant
-                de ces sections que vous le souhaitez.
-                <span class="more-content">
-                    Voici le texte caché pour cet exemple de paragraphe. Vous pouvez répéter cette structure pour chaque
-                    paragraphe que vous souhaitez avoir avec une option "Lire la suite".
-                </span>
-            </p>
-            <button class="toggleButton btn btn-link p-0">Lire la suite</button>
+        <div class="product">
+            <img src="https://via.placeholder.com/250" alt="Lait">
+            <h3>Lait</h3>
+            <p>Lait frais pasteurisé, idéal pour vos boissons et recettes.</p>
+            <p class="price">1,50 € / litre</p>
+            <button onclick="buyItem('Lait')">Acheter</button>
         </div>
+
+        <div class="product">
+            <img src="https://via.placeholder.com/250" alt="Poulet">
+            <h3>Poulet</h3>
+            <p>Filets de poulet de qualité supérieure, riches en protéines.</p>
+            <p class="price">9,99 € / kg</p>
+            <button onclick="buyItem('Poulet')">Acheter</button>
+        </div>
+
+        <div class="product">
+            <img src="https://via.placeholder.com/250" alt="Riz">
+            <h3>Riz</h3>
+            <p>Riz blanc parfumé, parfait pour accompagner tous vos plats.</p>
+            <p class="price">2,99 € / kg</p>
+            <button onclick="buyItem('Riz')">Acheter</button>
+        </div>
+
+        <div class="product">
+            <img src="https://via.placeholder.com/250" alt="Fromage">
+            <h3>Fromage</h3>
+            <p>Fromage affiné pour des saveurs authentiques.</p>
+            <p class="price">5,49 € / pièce</p>
+            <button onclick="buyItem('Fromage')">Acheter</button>
+        </div>
+
+        <div class="product">
+            <img src="https://via.placeholder.com/250" alt="Pain">
+            <h3>Pain</h3>
+            <p>Pain artisanal fraîchement préparé chaque jour.</p>
+            <p class="price">1,20 € / pièce</p>
+            <button onclick="buyItem('Pain')">Acheter</button>
+        </div>
+
     </div>
-
-    <!-- Bootstrap JS and dependencies (jQuery and Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script>
-        document.querySelectorAll('.toggleButton').forEach(button => {
-            button.addEventListener('click', function() {
-                const moreContent = this.previousElementSibling.querySelector('.more-content');
-                if (moreContent.style.display === 'none' || moreContent.style.display === '') {
-                    moreContent.style.display = 'inline';
-                    this.textContent = 'Réduire';
-                } else {
-                    moreContent.style.display = 'none';
-                    this.textContent = 'Lire la suite';
-                }
-            });
-        });
-    </script>
 </body>
 </html>
